; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/scsi_id/extr_scsi_serial.c_sg_err_category3.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/scsi_id/extr_scsi_serial.c_sg_err_category3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sg_io_hdr = type { i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sg_io_hdr*)* @sg_err_category3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sg_err_category3(%struct.sg_io_hdr* %0) #0 {
  %2 = alloca %struct.sg_io_hdr*, align 8
  store %struct.sg_io_hdr* %0, %struct.sg_io_hdr** %2, align 8
  %3 = load %struct.sg_io_hdr*, %struct.sg_io_hdr** %2, align 8
  %4 = getelementptr inbounds %struct.sg_io_hdr, %struct.sg_io_hdr* %3, i32 0, i32 5
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.sg_io_hdr*, %struct.sg_io_hdr** %2, align 8
  %7 = getelementptr inbounds %struct.sg_io_hdr, %struct.sg_io_hdr* %6, i32 0, i32 4
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.sg_io_hdr*, %struct.sg_io_hdr** %2, align 8
  %10 = getelementptr inbounds %struct.sg_io_hdr, %struct.sg_io_hdr* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.sg_io_hdr*, %struct.sg_io_hdr** %2, align 8
  %13 = getelementptr inbounds %struct.sg_io_hdr, %struct.sg_io_hdr* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.sg_io_hdr*, %struct.sg_io_hdr** %2, align 8
  %16 = getelementptr inbounds %struct.sg_io_hdr, %struct.sg_io_hdr* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.sg_io_hdr*, %struct.sg_io_hdr** %2, align 8
  %19 = getelementptr inbounds %struct.sg_io_hdr, %struct.sg_io_hdr* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @sg_err_category_new(i32 %5, i32 %8, i32 %11, i32 %14, i32 %17, i32 %20)
  ret i32 %21
}

declare dso_local i32 @sg_err_category_new(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
